--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
-    <p>
+    <p id="mision">
         <em>Nuestra misión es: 
             <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
         </em>
@@ -21,6 +21,14 @@
 
      <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
 
+    <h2>Diferenciales</h2>
+    
+    <ul>
+        <li class="items">Atención personalizada</li>
+        <li class="items">Espacio diferenciado</li>
+        <li class="items">Localización</li>
+        <li class="items">profesionales calificados</li>
+    </ul>
 
 </body>
 </html>
