Dividiendo las partes con div, agregando imagen a la lista de diferenciales

--- a/index.html
+++ b/index.html
@@ -8,27 +8,31 @@
     <title>Barbería Alura</title>
 </head>
 <body>
-    <img src="img/banner.jpg">
-    <h1>Sobre la Barbería de Alura</h1>
+    <img src="img/banner.jpg" id="banner">
 
-    <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+    <div class="principal">
+        <h1>Sobre la Barbería de Alura</h1>
 
-    <p id="mision">
-        <em>Nuestra misión es: 
-            <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
-        </em>
-    </p>
+        <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
-     <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+        <p id="mision">
+            <em>Nuestra misión es: 
+                <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
+            </em>
+        </p>
 
-    <h2>Diferenciales</h2>
-    
-    <ul>
-        <li class="items">Atención personalizada</li>
-        <li class="items">Espacio diferenciado</li>
-        <li class="items">Localización</li>
-        <li class="items">profesionales calificados</li>
-    </ul>
-
+        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+    </div>
+    <div class="diferenciales">
+        <h2>Diferenciales</h2>
+        
+        <ul>
+            <li class="items">Atención personalizada</li>
+            <li class="items">Espacio diferenciado</li>
+            <li class="items">Localización</li>
+            <li class="items">profesionales calificados</li>
+        </ul>
+        <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera">
+    </div>
 </body>
 </html>
