Ajustando imagen diferencial y dando padding y margin

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <h2>Diferenciales</h2>
         
         <ul>
-            <li class="items">Atención personalizada</li>
+            <li class="items">Atención personalizada a los clientes</li>
             <li class="items">Espacio diferenciado</li>
             <li class="items">Localización</li>
             <li class="items">profesionales calificados</li>
         </ul>
-        <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera">
+        <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera" class="imagenDiferenciales">
     </div>
 </body>
 </html>
