--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Barbería Alura</title>
 </head>
 <body>
+    <header>
+        <h1 class="tituloPrincipal">Barbería Alura</h1>
+    </header>
     <img src="img/banner.jpg" id="banner">
 
     <div class="principal">
-        <h1>Sobre la Barbería de Alura</h1>
+        <h2 class="tituloCentralizado">Sobre la Barbería de Alura</h2>
 
         <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
@@ -24,7 +27,7 @@
         <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
     </div>
     <div class="diferenciales">
-        <h2>Diferenciales</h2>
+        <h3 class="tituloCentralizado">Diferenciales</h3>
         
         <ul>
             <li class="items">Atención personalizada a los clientes</li>
