--- a/productos.html
+++ b/productos.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/productos.css">
 </head>
 <body>
+    <header>
+        <h1><img src="img/logo.png" alt="Logo de Barbería"></h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">Productos</a></li>
+            <li><a href="">Contacto</a></li>
+         </ul>
+
+
+    </header>
     
 </body>
 </html>
