--- a/productos.html
+++ b/productos.html
@@ -5,19 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Barbería Alura</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/productos.css">
 </head>
 <body>
+
     <header>
-        <h1><img src="img/logo.png" alt="Logo de Barbería"></h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">Productos</a></li>
-            <li><a href="">Contacto</a></li>
-         </ul>
-
-
+        <div class="caja">
+            <h1><img src="img/logo.png" alt="Logo de Barbería"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
+
+    <main>
+        <ul class="productos">
+            <li>
+                <h2>Cabello</h2>
+                <img src="img/cabello.jpg" alt="Logo Cabello">
+                <p class="productoDescripcion">Con tijera o máquina a gusto del cliente</p>
+                <p class="productoPrecio">$ 10.00</p>
+            </li>
+            <li><h2>Barba</h2>
+                <img src="img/barba.jpg" alt="Logo Barba">
+                <p class="productoDescripcion">Corte y diseño profesional de barbar</p>
+                <p class="productoPrecio">$ 08.00</p>
+            </li>
+            <li><h2>Cabello + Barba</h2>
+                <img src="img/cabello+barba.jpg" alt="Logo Cabello">
+                <p class="productoDescripcion">Paquete completo de cabello y barba</p>
+                <p class="productoPrecio">$ 15.00</p>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <img src="img/logo-blanco.png" alt="Logo del footer">
+        <p class="copyright">&copy Copyright Barbería Alura</p>
+    </footer>
 </body>
 </html>
