Agregando text área para mensaje, radio buttons para contacto y checkbox para confirmar si el cliente quiere recibir novedades

--- a/contacto.html
+++ b/contacto.html
@@ -34,6 +34,26 @@
             <label for="telefono">Teléfono</label>
             <input type="text" id="telefono">
 
+            <label for="mensaje">Mensaje</label>
+            <textarea id="mensaje" cols="70" rows="10"></textarea>
+
+            <div>
+
+                <p>Cómo le gustaría que lo contactemos?</p>
+            
+
+                <label for="radio-email">E-mail</label>
+                <input type="radio" value="email" id="radio-email" name="contacto">
+
+                <label for="radio-telefono">Teléfono</label>
+                <input type="radio" value="telefono" id="radio-telefono" name="contacto">
+
+                <label for="radio-whatsapp">Whatsapp</label>
+                <input type="radio" value="whatsapp" id="radio-whatsapp" name="contacto">
+            </div>
+
+            <label><input type="checkbox">Le gustaría recibir novedades sobre la Barbería Alura?</label>
+
             <input type="submit" value="Enviar Formulario">
         </form>
     </main>
