Agregando tabla con días y horarios (sólo html)

--- a/contacto.html
+++ b/contacto.html
@@ -65,6 +65,26 @@
 
             <input type="submit" value="Enviar Formulario" class="enviar">
         </form>
+
+        <table>
+            <tr>
+                <td>Días</td>
+                <td>Horario</td>
+            </tr>
+            <tr>
+                <td>Lunes</td>
+                <td>08hs - 20hs</td>
+            </tr>
+            <tr>
+                <td>Miércoles</td>
+                <td>08hs - 20hs</td>
+            </tr>
+            <tr>
+                <td>Viernes</td>
+                <td>08hs - 20hs</td>
+            </tr>
+
+        </table>
     </main>
     <footer>
         <img src="img/logo-blanco.png" alt="Logo del footer">
