Cambios para empezar con la parte 4 del curso de html y css

--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Barbería Alura</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -16,8 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,9 +43,11 @@
             </li>
         </ul>
     </main>
+
     <footer>
         <img src="img/logo-blanco.png" alt="Logo del footer">
         <p class="copyright">&copy Copyright Barbería Alura</p>
     </footer>
+    
 </body>
 </html>
