--- a/index.html
+++ b/index.html
@@ -4,38 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css" >
     <title>Barbería Alura</title>
 </head>
 <body>
     <header>
-        <h1 class="tituloPrincipal">Barbería Alura</h1>
+        <div class="caja">
+            <h1><img src="img/logo.png" alt="Logo de Barbería"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <img src="img/banner.jpg" id="banner">
 
-    <div class="principal">
-        <h2 class="tituloCentralizado">Sobre la Barbería de Alura</h2>
+    <main>
+        <section class="principal">
+            <h2 class="tituloCentralizado">Sobre la Barbería de Alura</h2>
 
-        <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+            <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
-        <p id="mision">
-            <em>Nuestra misión es: 
-                <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
-            </em>
-        </p>
+            <p id="mision">
+                <em>Nuestra misión es: 
+                    <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
+                </em>
+            </p>
 
-        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
-    </div>
-    <div class="diferenciales">
-        <h3 class="tituloCentralizado">Diferenciales</h3>
-        
-        <ul>
-            <li class="items">Atención personalizada a los clientes</li>
-            <li class="items">Espacio diferenciado</li>
-            <li class="items">Localización</li>
-            <li class="items">profesionales calificados</li>
-        </ul>
-        <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera" class="imagenDiferenciales">
-    </div>
+            <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+        </section>
+        <section class="diferenciales">
+            <h3 class="tituloCentralizado">Diferenciales</h3>
+            
+            <ul>
+                <li class="items">Atención personalizada a los clientes</li>
+                <li class="items">Espacio diferenciado</li>
+                <li class="items">Localización</li>
+                <li class="items">profesionales calificados</li>
+            </ul>
+            <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera" class="imagenDiferenciales">
+        </section>
+    </main>
+
+    <footer>
+        <img src="img/logo-blanco.png" alt="Logo del footer">
+        <p class="copyright">&copy Copyright Barbería Alura</p>
+    </footer>
 </body>
 </html>
