Añadiendo google fonts a todas las páginas, se aplicó tipo de fuente Montserrat light 300 a todas las páginas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>Barbería Alura</title>
 </head>
 <body>
@@ -22,18 +25,18 @@
         </div>
     </header>
 
-    <img src="img/banner.jpg" id="banner">
+    <img src="img/banner.jpg" class="banner">
 
     <main>
         <section class="principal">
-            <h2 class="tituloCentralizado">Sobre la Barbería de Alura</h2>
+            <h2 class="titulo-principal">Sobre la Barbería de Alura</h2>
+            
+            <img class="utensilios" src="img/utensilios[1].jpg" alt="Utensillos de un barbero">
 
-            <p> Ubicada en el corazón de la ciudad, la Barbería Alura trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+            <p>Ubicada en el corazón de la ciudad, la <em>Barbería Alura</em> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
             <p id="mision">
-                <em>Nuestra misión es: 
-                    <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.
-                </em>
+                Nuestra misión es: <em><strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong></em>.             
             </p>
 
             <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
@@ -47,7 +50,7 @@
                 <li class="items">Localización</li>
                 <li class="items">profesionales calificados</li>
             </ul>
-            <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera" class="imagenDiferenciales">
+            <img src="img/diferenciales.jpg" alt="Hombre al que le recortan la barba con tijera" class="imagen-diferenciales">
         </section>
     </main>
 
